Implement default virtual threads for TileExecutors and update related specs and documentation